# mkdocs-custom-theme

./: 404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
custom_theme/extensions/: emoji.py
docs/: index.md
search/: search_index.json
